Bug 113351 - [CSS Grid Layout] Before / start paddings and borders are not accounted for when placing the grid items
Summary: [CSS Grid Layout] Before / start paddings and borders are not accounted for w...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Julien Chaffraix
URL:
Keywords:
Depends on:
Blocks: 60731
  Show dependency treegraph
 
Reported: 2013-03-26 16:03 PDT by Julien Chaffraix
Modified: 2013-03-28 12:22 PDT (History)
7 users (show)

See Also:


Attachments
Test case, there should be some grey above and left of the colored squares (639 bytes, text/html)
2013-03-26 21:04 PDT, Julien Chaffraix
no flags Details
Proposed fix 1: Add the borders and paddings before / start. (27.94 KB, patch)
2013-03-27 20:10 PDT, Julien Chaffraix
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Chaffraix 2013-03-26 16:03:42 PDT
Putting the following on the grid container (grid element before):

padding: 20px;

doesn't add the top and left padding (see test case).
Comment 1 Julien Chaffraix 2013-03-26 21:03:46 PDT
I misinterpreted the issue. The grid container is properly sized but the grid items ignore any paddings (and probably borders).
Comment 2 Julien Chaffraix 2013-03-26 21:04:23 PDT
Created attachment 195216 [details]
Test case, there should be some grey above and left of the colored squares
Comment 3 Julien Chaffraix 2013-03-27 20:10:13 PDT
Created attachment 195468 [details]
Proposed fix 1: Add the borders and paddings before / start.
Comment 4 WebKit Review Bot 2013-03-28 12:22:20 PDT
Comment on attachment 195468 [details]
Proposed fix 1: Add the borders and paddings before / start.

Clearing flags on attachment: 195468

Committed r147140: <http://trac.webkit.org/changeset/147140>
Comment 5 WebKit Review Bot 2013-03-28 12:22:23 PDT
All reviewed patches have been landed.  Closing bug.