[CSS Grid Layout] Before / start paddings and borders are not accounted for when placing the grid items https://bugs.webkit.org/show_bug.cgi?id=113351

Reviewed by Tony Chang.

Source/WebCore:

Tests: fast/css-grid-layout/grid-element-border-grid-item.html
       fast/css-grid-layout/grid-element-border-padding-grid-item.html
       fast/css-grid-layout/grid-element-padding-grid-item.html

* rendering/RenderBoxModelObject.h:
(WebCore::RenderBoxModelObject::borderAndPaddingBefore):
Added this helper function (we do have borderAndPaddingStart but didn't have this
one for some reason).

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::findChildLogicalPosition):
Shifted |offset| by the paddings and borders before / start.

LayoutTests:

* fast/css-grid-layout/resources/grid.css:
(.verticalLR):
(.horizontalBT):
(.directionRTL):
Added more helper classes.

* fast/css-grid-layout/grid-element-border-grid-item-expected.txt: Added.
* fast/css-grid-layout/grid-element-border-grid-item.html: Added.
* fast/css-grid-layout/grid-element-border-padding-grid-item-expected.txt: Added.
* fast/css-grid-layout/grid-element-border-padding-grid-item.html: Added.
* fast/css-grid-layout/grid-element-padding-grid-item-expected.txt: Added.
* fast/css-grid-layout/grid-element-padding-grid-item.html: Added.


Canonical link: https://commits.webkit.org/131867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147140 268f45cc-cd09-0410-ab3c-d52691b4dbfc